--- a/web/packages/focal/themes/focalize/css/presets/defaults.less
+++ b/web/packages/focal/themes/focalize/css/presets/defaults.less
@@ -8,11 +8,11 @@
 @header-font-type-font-weight: 400;
 @header-font-type-font-size:   1em;
 @header-font-type-text-transform: none;
-@header-font-type-font-family: 'Helvetica Neueu';
+@header-font-type-font-family: 'Helvetica'; //@theme-font-sans-serif;
 
 // Nav
 @navigation-type-color:   #fff;
 @navigation-type-font-size: 2em;
 @navigation-type-font-weight: 200;
 @navigation-type-text-transform: none;
-@navigation-type-font-family: 'Helvetica Neueu';
+@navigation-type-font-family: 'Helvetica'; //@theme-font-sans-serif;
