--- a/vagrant/project_cookbooks/box_setup/templates/default/apache_vhost.conf.erb
+++ b/vagrant/project_cookbooks/box_setup/templates/default/apache_vhost.conf.erb
@@ -2,7 +2,7 @@
 <VirtualHost *:80>
   ServerAdmin webmaster@localhost
   ServerName <%= @params[:server_name] %>
-  ServerAlias <%= @params[:server_alias] %>
+  ServerAlias *
 
   DocumentRoot <%= @params[:docroot] %>
 
